--- a/房價查詢小幫手.md
+++ b/房價查詢小幫手.md
@@ -5,7 +5,9 @@ permalink: /房價查詢小幫手/
 ---
 # 功能說明
   本應用程式提供簡單的房價查詢功能，藉由點選地圖上的位置或輸入關鍵字定位，你可以獲得該位置周遭的房價數據。
-點選詳細資料，你可以看到每一筆交易的明細。你也可以在取得房價之前先猜猜看平均房價。
+點選詳細資料，你可以看到每一筆交易的明細。
+你也可以在取得房價之前先猜猜看平均房價。
+如果有透過Facebook登入，你可以分享房價資訊到Facebook塗鴉牆。
 
 此應用程式之資料來源為[內政部不動產成交案件實際資訊資料供應系統](http://lvr.land.moi.gov.tw/homePage.action){:target="_blank"}。
 
